# du-tools

./: .gitignore  AGENTS.md  CheckHashes.cs  FactorySample.json  README.md  ScreenLayoutEditor-v000.lua  ScreenLayoutEditor-v001.lua  ScreenLayoutEditor-v002.lua  ScreenLayoutEditor.lua  ScreenTest001.lua  all-mesh-boxes.json  du-tests.md  du-ui.md  du-visual-subagent.md  du_blueprint_parser.py  f1-html.md  findings.md  fix-dump.md  playtime.md  progress.md  task_plan.md
DuMcpBridge/: README.md  bridge-live-test.md  package-lock.json  package.json  run-mcp.cmd  tech-doc.md  tsconfig.json
HashCheck/: HashCheck.cs  HashCheck.csproj  MeshDump.cs  MeshDump.csproj  README.md  items-boxes.json
Industry/: Al-Fe-workflow.md  Al-Fe.md  Alloy-line-build.md  Bootstrap prompt Industry Setup Workflow.md  Frame Industry Setup Notes.md  Panel Industry Setup Notes.md  Part-Named Industry Setup Workflow.md  Rare Ore Scanner L Setup Notes.md  camera-lua.md  create-parts-catalogue.py  electronics-parts.md  electronics-tracked.md  element-placement-notes.md  industry-parts.md  pipe-setup.md  warp-cells.md  warpcells-redone.md
ItemExport2Json/: ItemExport2Json.csproj  Program.cs  README.md  itembank.json  itembank.yaml
ItemExportWin/: ItemExportWin.csproj  ItemExportWin.sln  LICENSE  MainForm.Designer.cs  MainForm.cs  MyDuController.cs  MyDuData.cs  Program.cs  README.md
LuaPainter/: README.md  e2e_testing.md  render-shape-snippet-plan.md
MeshDump/: MeshDump.cs  README.md
ModFlightLogger/: Directory.Build.props  (+4 more)
logmgr/: ANALYSIS.md  Cargo.toml  README.md
logmgr/src/: main.rs
(+368 files in other folders)
