[package]
name = "logmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = true }
crossterm = "0.28"
ratatui-core = { version = "0.1", features = ["std", "underline-color", "layout-cache"] }
ratatui-crossterm = { version = "0.1", features = ["crossterm_0_28", "underline-color"] }
ratatui-widgets = { version = "0.3", features = ["std", "all-widgets"] }
walkdir = "2.5"
